// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<form style="display: flex; flex-direction: column; gap: var(--ds-size-2);">
  <div>
    <input
      aria-label="Søk"
      id="<removed>"
      placeholder
      type="search"
      value
    >
    <button
      aria-label="Tøm"
      data-icon="true"
      data-variant="tertiary"
      type="reset"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
  <div style="display: flex; gap: var(--ds-size-2); align-items: center;">
    <p
      data-size="sm"
      data-variant="default"
    >
      Hurtigsøk:
    </p>
    <button type="button">
      Læreplaner
    </button>
    <button type="button">
      Skole
    </button>
    <button type="button">
      Eksamen
    </button>
  </div>
</form>
`;

exports[`Form 1`] = `
<form>
  <div>
    <input
      aria-label="Søk"
      placeholder
      type="search"
    >
    <button
      aria-label="Tøm"
      data-icon="true"
      data-variant="tertiary"
      type="reset"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
</form>
`;

exports[`Live Search 1`] = `
<div>
  <input
    aria-label="Søk"
    placeholder
    type="search"
    value
  >
  <button
    aria-label="Tøm"
    data-icon="true"
    data-variant="tertiary"
    type="reset"
  >
  </button>
</div>
`;

exports[`Preview 1`] = `
<form>
  <div>
    <input
      aria-label="Søk"
      placeholder
      type="search"
    >
    <button
      aria-label="Tøm"
      data-icon="true"
      data-variant="tertiary"
      type="reset"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
</form>
`;

exports[`Variants 1`] = `
<div>
  <div>
    <input
      aria-label="Søk"
      placeholder
      type="search"
    >
    <button
      aria-label="Tøm"
      data-icon="true"
      data-variant="tertiary"
      type="reset"
    >
    </button>
  </div>
  <hr
    aria-hidden="true"
    style="margin-top: var(--ds-size-4);"
  >
  <div>
    <input
      aria-label="Søk"
      placeholder
      type="search"
    >
    <button
      aria-label="Tøm"
      data-icon="true"
      data-variant="tertiary"
      type="reset"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
  <hr
    aria-hidden="true"
    style="margin-top: var(--ds-size-4);"
  >
  <div>
    <input
      aria-label="Søk"
      placeholder
      type="search"
    >
    <button
      aria-label="Tøm"
      data-icon="true"
      data-variant="tertiary"
      type="reset"
    >
    </button>
    <button
      data-variant="secondary"
      type="submit"
    >
      Søk
    </button>
  </div>
</div>
`;

exports[`With Label 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Søk i læreplaner
  </label>
  <div>
    <input
      id="<removed>"
      name="cat-search"
      placeholder
      type="search"
    >
    <button
      aria-label="Tøm"
      data-icon="true"
      data-variant="tertiary"
      type="reset"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
</ds-field>
`;
